# phone_auth_test_ex

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
Postman Collections/: postman_collection.json
src/accounts/: admin.py  auth.py  exceptions.py  managers.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/config/: middlewares.py
src/config/settings/: __init__.py  base.py  drf.py  logging.py
src/utils/: CustomThread.py
